deps/v8/test/message/fail/string-prototype-matchall-no-flags.out
*%(basename)s:5: TypeError: The .flags property of the argument to String.prototype.matchAll cannot be null or undefined
"foo".matchAll({[Symbol.match]: true});
      ^
TypeError: The .flags property of the argument to String.prototype.matchAll cannot be null or undefined
    at String.matchAll (<anonymous>)
    at *%(basename)s:5:7
